Adjust page container

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,12 @@ body {
 
 .pageContainer {
   width: 100vw;
-  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
   background-image: url("../img/pattern.png");
   background-repeat: repeat;
+  padding-bottom: 50px;
 }
 
 .header {
